@@ -117,9 +117,8 @@ per_account_get_pass_func (TnyAccountIface *account, const gchar *prompt, gboole
 static void
 per_account_forget_pass_func (TnyAccountIface *account)
 {
-	const TnyAccountStoreIface *self = tny_account_iface_get_account_store (account);
-	TnyAccountStorePriv *priv = TNY_ACCOUNT_STORE_GET_PRIVATE (self);
 	TnyGetPassFunc func;
+    
 	if (G_LIKELY (passwords))
 	{
 		const gchar *accountid = tny_account_iface_get_id (account);
@@ -295,7 +294,7 @@ tny_account_store_get_accounts (TnyAccountStoreIface *self, TnyListIface *list, 
 			{
 				while (options)
 				{
-					tny_account_add_option (TNY_ACCOUNT (account), options->data);
+					tny_camel_account_add_option (TNY_CAMEL_ACCOUNT (account), options->data);
 					g_free (options->data);
 					options = g_slist_next (options);
 				}
@@ -356,7 +355,7 @@ tny_account_store_get_accounts (TnyAccountStoreIface *self, TnyListIface *list, 
 				per_account_get_pass_func);
 
 
-			tny_list_iface_prepend (list, account);
+			tny_list_iface_prepend (list, (GObject*)account);
 			g_object_unref (G_OBJECT (account));
 
 		}
